# task-maker

./: .bazelrc  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .syntastic_cpp_config  .travis.yml  BUILD.googletest  CMakeLists.txt  README.md  WORKSPACE  release.sh  run_tests.sh
.circleci/: config.yml  release.sh
bindings/: BUILD  __init__.py  core.cpp  core.pyi  execution.cpp  execution.pyi  file_id.cpp  file_id.pyi  sum.cpp  task_maker.py
capnp/: CMakeLists.txt  cache.capnp  evaluation.capnp  file.capnp  server.capnp  sha256.capnp
cmake/: AddressSanitizer.cmake  CLI11Config.cmake  CapnProtoConfig.cmake  FindGRPC.cmake  FindProtobuf.cmake  GMockConfig.cmake  GRPC.cmake  MemorySanitizer.cmake  Protobuf.cmake  RemoveFlags.cmake  ThreadSanitizer.cmake  UndefinedSanitizer.cmake  config.cmake  dwConfig.cmake  gRPCConfig.cmake  glogConfig.cmake  nlohmann_jsonConfig.cmake  plogConfig.cmake
core/: BUILD  core.cpp  core.hpp  execution.cpp  execution.hpp  execution_cacher.cpp  execution_cacher.hpp  file_id.cpp  file_id.hpp  running_task.hpp  task_status.hpp  waiting_task.hpp
cpp/: CMakeLists.txt  main.cpp
cpp/core/: core.cpp  core.hpp  execution.cpp  execution.hpp  execution_cacher.cpp  execution_cacher.hpp  file_id.cpp  file_id.hpp  task_status.hpp
cpp/executor/: executor.hpp  local_executor.cpp
cpp/frontend/: CMakeLists.txt  frontend.cpp  frontend.hpp
cpp/frontend/python/: CMakeLists.txt  frontend.cpp
cpp/manager/: evaluation.hpp  event_queue.cpp  event_queue.hpp  generation.hpp  manager.cpp  manager.hpp  source_file.cpp  source_file.hpp
cpp/manager/ioi_format/: ioi_evaluation.cpp  ioi_evaluation.hpp  ioi_format.cpp  ioi_format.hpp  ioi_generation.cpp  ioi_generation.hpp
cpp/manager/terry_format/: terry_evaluation.cpp  terry_evaluation.hpp  terry_format.cpp  terry_generation.cpp
cpp/remote/: common.cpp  server.cpp  server.hpp  worker.cpp  worker.hpp
cpp/sandbox/: echo.cpp  echo.hpp  main.cpp  main.hpp  sandbox.cpp  sandbox.hpp  sandbox_manager.cpp  sandbox_manager.hpp  unix.cpp  unix.hpp  unix_test.cpp
cpp/sandbox/test/: CMakeLists.txt  busywait_arg1.cpp  copy_int.cpp  malloc_arg1.cpp  return_arg1.cpp  signal_arg1.cpp  wait_arg1.cpp
cpp/server/: cache.cpp  cache.hpp  dispatcher.cpp  dispatcher.hpp  main.cpp  main.hpp  server.cpp  server.hpp
cpp/util/: daemon.cpp  daemon.hpp  file.cpp  file.hpp  file_test.cpp  flags.cpp  flags.hpp  ipc.hpp  log_manager.cpp  log_manager.hpp  misc.cpp  misc.hpp  misc_test.cpp  sha256.LICENSE  sha256.cpp  sha256.hpp  union_promise.cpp  union_promise.hpp  union_promise_test.cpp  version.hpp  which.cpp  which.hpp  which_test.cpp
cpp/worker/: cache.cpp  cache.hpp  executor.cpp  executor.hpp  main.cpp  main.hpp  manager.cpp  manager.hpp
dockerfiles/: test.Dockerfile
executor/: BUILD  executor.hpp  executor_builder.cpp  executor_builder.hpp  local_executor.cpp  local_executor.hpp  remote_executor.cpp  remote_executor.hpp
hooks/: clang-tidy  lint-all  lint-cpp-file  lint-head  linter
manager/: BUILD  evaluation.cpp  evaluation.hpp  evaluation_info.hpp  event_queue.cpp  event_queue.hpp  generation.cpp  generation.hpp  ioi_evaluation.cpp  ioi_evaluation.hpp  ioi_generation.cpp  (+7 more)
proto/: BUILD  CMakeLists.txt  cache_entry.proto  event.proto  file.proto  manager.proto  request.proto  resources.proto  response.proto  server.proto  sha256.proto  task.proto
python/: BUILD  CMakeLists.txt  MANIFEST.in  __init__.py  absolutize.py  args.py  bulk_maker.py  config.py  contest_maker.py  curses_ui.py  dependency_finder.py  detect_exe.py  detect_format.py  dispatcher.py  evaluation.py  execution.py  generation.py  help.py  ioi_format.py  italian_format.py  language.py  manager.py  print_ui.py  printer.py  promise.py  requirements.txt  sanitize.py  setup.py.in  silent_ui.py  solution.py  source_file.py  syspath_patch.py  task.py  task_maker.py  terry_format.py  test.py  ui.py  utils.py  version.py.in
python/formats/: __init__.py  ioi_format.py  terry_format.py  tm_format.py
python/formats/ioi_format/: __init__.py  execution.py  fuzz_checker.py  parsing.py
python/formats/terry_format/: __init__.py  execution.py  parsing.py
python/languages/: __init__.py  asy.py  c.py  cpp.py  executable.py  java.py  pascal.py  php.py  python.py  rust.py  sh.py
python/remote/: __init__.py
python/sanity_checks/: ioi.py
python/statements/: __init__.py  oii_tex.py
python/statements/templates/oii_tex/: contest.tpl  defaults.yaml  task.tpl
python/statements/templates/oii_tex/data/: cms-contest.cls
python/statements/templates/oii_tex/data/locale/: english.tex  italian.tex
python/tests/: .gitignore  communication.py  parser.py  terry_with_bugged_gen.py  terry_with_validator.py  terry_without_validator.py  test.py  tm.py  tm_constraint_failed.py  utils.py  with_bugged_checker.py  with_bugged_gen.py  with_bugged_sol.py  with_bugged_val.py  with_checker.py  with_invalid_copy.py  with_st.py  with_stdin.py  without_gen.py  without_st.py
python/tests/task_communication/: task.yaml
python/tests/task_terry_with_bugged_gen/managers/: generator.py
python/tests/task_terry_with_validator/: task.yaml
python/tests/task_terry_with_validator/managers/: validator.py
python/tests/task_terry_with_validator/solutions/: solution.py  unordered.py  wrong.py
python/tests/task_terry_without_validator/: task.yaml
python/tests/task_tm/: task.yaml
python/tests/task_tm/sol/: even.py  odd.py  solution.py
python/tests/task_tm_constraint_failed/: .gitignore  task.yaml
python/tests/task_with_bugged_gen/: task.yaml
python/tests/task_with_bugged_sol/: task.yaml
python/tests/task_with_bugged_val/: task.yaml
python/tests/task_with_checker/cor/: correttore.cpp
python/tests/task_with_invalid_copy/: task.yaml
python/tests/task_with_st/sol/: tle.cpp
python/tests/task_with_stdin/: task.yaml
python/uis/: __init__.py  bulk_finish_ui.py  curses_ui.py  ioi.py  ioi_curses_ui.py  ioi_finish_ui.py  ioi_finish_ui_json.py  print_ui.py  silent_ui.py  terry.py  terry_curses_ui.py  terry_finish_ui.py  terry_finish_ui_json.py  ui_printer.py
(+124 files in other folders)
